--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,8 @@
 .logo-section {
     display: flex;
     align-items: center;
+    justify-content: center;
+    
 }
 
 .logo-section .logo-img {
@@ -461,7 +463,7 @@
 
 /* Video Section CSS Ends Here */
 
-/* Newslatter Section CSS Start Here */
+/* News letter Section CSS Start Here */
 .news-latter-section {
     width: 1250px;
     margin: 0 auto;
@@ -539,6 +541,7 @@
     color: #FFF;
     font-size: 28px;
 }
+/* Newsletter section CSS End here */
 
 /* Footer section css start here */
 .footer-section {
@@ -597,15 +600,13 @@
 
 /* Footer Section CSS Ends Here */
 
-/* Newslatter section CSS End here */
-
-
-
-
 
 /* Responsive Part CSS start here */
 
 @media screen and (max-width: 576px) {
+    .logo-section {
+        width: 533px;
+    }
     .menu-section .menu {
         display: block;
     }
@@ -655,7 +656,9 @@
     .popular-section {
         width: 365px;
     }
-
+    .left-text {
+        width: 311px;
+    }
     .left-text h2 {
         color: #131318;
         font-size: 20px;
@@ -683,7 +686,7 @@
         flex-direction: column;
     }
     .right-img {
-        width: 504px;
+        width: 365px;
         margin-top: 25px;
     }
     .right-img img {
@@ -711,23 +714,28 @@
         width: 365px;
         margin: 0 auto;
     }
-    .card-1{
-        width: 335px;
+    .card-1 {
+        width: 365px;
         display: flex;
         flex-direction: column-reverse;
+        row-gap: 20px;
     }
-    .img img{
-        width: 335px;
+    .img img {
+        width: 365px;
     }
-    .card-2{
-        width: 335px;
+    .card-2 {
+        width: 365px;
         display: flex;
         flex-direction: column;
+        row-gap: 20px;
+        margin-top: 20px;
     }
-    .card-3{
-        width: 335px;
+    .card-3 {
+        width: 365px;
         display: flex;
         flex-direction: column;
+        row-gap: 20px;
+        margin-top: 20px;
     }
     /* Destination Section Responsive CSS End */
     /* Choose Us Section */
@@ -736,30 +744,32 @@
     }
     .text h2 {
         color: #131318;
-        font-size: 20px;
+        font-size: 30px;
     }
     .text p {
         color: rgba(19, 19, 24, 0.70);
-        font-size: 14px;
-        line-height: 24px;
-        width: 310px;
+        font-size: 19px;
+        line-height: 28px;
+        width: 365px;
     }
     .box-wrapper{
         display: grid;
         flex-wrap: wrap;
     }
-    .card-box{
-        width: 350px;
-        margin-bottom: 10px;
+    .card-box {
+        width: 365px;
+        margin-bottom: 25px;
     }
-    .box-3{
-        width: 350px;
+    .box-3 {
+        width: 365px;
+        margin-top: 0px;
     }
     /* Choose Us section End */
 
-    /* Deals Section Resposive CSS start */
+    /* Deals Section Responsive CSS start */
     .discount-section {
         width: 365px;
+        margin-top: -60px;
     }
     .content{
 
@@ -825,29 +835,93 @@
         display: none;
     }
     /* text and video creation responsive css */
-    .left-text{
-
-    }
-    .video-text-section{
+    .video-text-section {
         display: flex;
+        flex-direction: column;
+        width: 365px;
     }
     .left-text h2 {
         color: #131318;
+        width: 248px;
         font-size: 20px;
-        width: 247px;
+        line-height: 30px;
     }
-    .left-text p{
-
+    .left-text p {
+        color: rgba(19, 19, 24, 0.70);
+        font-size: 14px;
+    
     }
     .left-text ul{
 
     }
-    .left-text ul li{
+    .left-text ul li {
+        color: #131318;
+        /* font-family: Mulish; */
+        font-size: 14px;
+        /* font-style: normal; */
+        font-weight: 700;
+        line-height: 24px;
+    }
+    
+    .right-video-part {
+        margin-top: 15px;
+    }
+    .right-video-part img {
+        width: 365px;
+    }
+    /* text and video end */
 
+
+    /* Newsletter Section */
+    .news-latter-section {
+        display: flex;
+        flex-direction: column;
+        width: 365px;
+    }
+    .left-content {
+        width: 365px;
+    }
+    .left-content h2 {
+        color: #131318;
+        font-size: 20px;
+    }
+    .left-content p {
+        width: 300px;
+        color: #5A5A5D;
+        font-size: 14px;
+        line-height: 24px;
+    }
+    .left-content input {
+        width: 334px;
+        height: 60px;
+    }
+    .left-content .btn-subs {
+        height: 52px;
+        font-weight: bold;
+        font-size: 22px;
+    }
+
+    .right-banner img {
+        width: 410px;
+        margin-top: 30px;
+        position: relative;
+    }
+    .text-box {
+        position: absolute;
+        top: 126px;
+        right: 6px;
+    }
+
+    /* Newsletter Section End */
+
+    /* Footer Section Responsive */
+    
+    .content-part p {
+        width: 400px;
+        margin-top: 10px;
     }
 
 
-    /* text and video end */
     
 
 
